[ABCPI] continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
-    <title>Alfred Basic Piano Course I</title>
+    <title>Scales</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,30 +31,38 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Alfred Basic Piano Course I"><h1 id="Alfred Basic Piano Course I" class="header"><a href="#Alfred Basic Piano Course I">Alfred Basic Piano Course I</a></h1></div>
+<div id="Scales"><h1 id="Scales" class="header"><a href="#Scales">Scales</a></h1></div>
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="01_notation.html">Notation</a>
+<a href="05_scales.html#Do%20Major%20Scale">Do Major Scale</a>
 
-</li><li>
-<a href="02_positions.html">Positions</a>
+</li></ul>
+<hr>
 
-</li><li>
-<a href="03_intervals.html">Intervals</a>
+<p>
+The <span id="Scales-major scale"></span><strong id="major scale">major scale</strong> is made of <span id="Scales-two tetrachords"></span><strong id="two tetrachords">two tetrachords</strong> joined by a <span id="Scales-whole step"></span><strong id="whole step">whole step</strong>.
+</p>
 
-</li><li>
-<a href="04_chords.html">Chords</a>
+<div id="Scales-Do Major Scale"><h2 id="Do Major Scale" class="header"><a href="#Scales-Do Major Scale">Do Major Scale</a></h2></div>
 
-</li><li>
-<a href="05_scales.html">Scales</a>
+<p>
+The Do Major scale is constrcuted as follow:
+</p>
 
-</li></ol>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/c_major_scale.png" alt="Do Major Scale">
+</p>
+
+<p>
+Each scale begins and ends on a note of the same name as the scale, called the <span id="Scales-Do Major Scale-key note"></span><strong id="key note">key note</strong>.
+</p>
 </div>
   
 
