[CET] 02_01: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -59,6 +59,14 @@ Functions and Models
 <a href="01_05.html">Inverse Functions and Logarithms</a>
 
 </li></ol>
+</li><li>
+Limits and Derivatives
+
+<ol>
+<li>
+<a href="02_01.html">The Tangent and Velocity Problems</a>
+
+</li></ol>
 </li></ol>
 </div>
   
