[ABCPI] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -174,7 +174,11 @@ A \(\textit{mf (mezzoforte)}\) tells us to moderately loud.
 </p>
 
 <p>
-A \(\textit{f (forte)}\) tells us to loud.
+A \(\textit{f (forte)}\) tells us to play loud.
+</p>
+
+<p>
+A \(\textit{ff (fortissimo)}\) tells us to play very loud.
 </p>
 
 <div id="Notation-Tied Notes"><h2 id="Tied Notes" class="header"><a href="#Notation-Tied Notes">Tied Notes</a></h2></div>
