--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -71,6 +71,9 @@
 </li><li>
 <a href="04_chords.html#Tetrachord">Tetrachord</a>
 
+</li><li>
+<a href="04_chords.html#Triads">Triads</a>
+
 </li></ul>
 <hr>
 
@@ -157,6 +160,31 @@ Whole step, whole step, half step
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/tetrachord.png" alt="Tetrachord">
+</p>
+
+<div id="Chords-Triads"><h2 id="Triads" class="header"><a href="#Chords-Triads">Triads</a></h2></div>
+
+<p>
+A <span id="Chords-Triads-triad"></span><strong id="triad">triad</strong> is a 3-note chord. The three notes of a triad are:
+</p>
+
+<ul>
+<li>
+Root
+
+</li><li>
+Third
+
+</li><li>
+Fifth
+
+</li></ul>
+<p>
+The root is the note from which the triad gets its name. The root of a Do Triad is Do.
+</p>
+
+<p>
+Triads in <span id="Chords-Triads-root position"></span><strong id="root position">root position</strong> are triads that have the root at the bottom.
 </p>
 </div>
   
