--- a/src/Notes/Music/ABPCI/06_keys.html
+++ b/src/Notes/Music/ABPCI/06_keys.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
-    <title>Alfred Basic Piano Course I</title>
+    <title>Keys</title>
   <link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"><script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,33 +31,57 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Alfred Basic Piano Course I"><h1 id="Alfred Basic Piano Course I" class="header"><a href="#Alfred Basic Piano Course I">Alfred Basic Piano Course I</a></h1></div>
+<div id="Keys"><h1 id="Keys" class="header"><a href="#Keys">Keys</a></h1></div>
 
 <hr>
 
-<ol>
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
 <li>
-<a href="01_notation.html">Notation</a>
+<a href="06_keys.html#Primary%20Chords">Primary Chords</a>
+
+<ul>
+<li>
+<a href="06_keys.html#Primary%20Chords%20in%20Do%20Major">Primary Chords in Do Major</a>
+
+</li></ul>
+</li></ul>
+<hr>
+
+<p>
+Music based on any particular scale is said to be in the <span id="Keys-key"></span><strong id="key">key</strong> of that scale. If there are shaprs or flats in the scale, they are shown at the beginning of the score. This is called the <span id="Keys-key signature"></span><strong id="key signature">key signature</strong>.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/key_signature.png" alt="Key Signature">
+</p>
+
+<div id="Keys-Primary Chords"><h2 id="Primary Chords" class="header"><a href="#Keys-Primary Chords">Primary Chords</a></h2></div>
+
+<p>
+The three most important chords in any key are those built on the <span id="Keys-Primary Chords-1st"></span><strong id="1st">1st</strong>, <span id="Keys-Primary Chords-4th"></span><strong id="4th">4th</strong> and <span id="Keys-Primary Chords-5th"></span><strong id="5th">5th</strong> notes of the scale. These are called the <span id="Keys-Primary Chords-PRIMARY CHORDS"></span><strong id="PRIMARY CHORDS">PRIMARY CHORDS</strong> of the key.
+</p>
+
+<p>
+The chords are identified by the roman numerals \(\textbf{I}\), \(\textbf{IV}\) and \(\textbf{V}\). The \(\textbf{V}\) chord usually adds the note a \(7\)th above the root to make a \(\textbf{V}^7\).
+</p>
+
+<div id="Keys-Primary Chords-Primary Chords in Do Major"><h3 id="Primary Chords in Do Major" class="header"><a href="#Keys-Primary Chords-Primary Chords in Do Major">Primary Chords in Do Major</a></h3></div>
+
+<ul>
+<li>
+The \(\textbf{I}\) chord is the Do Major Triad.
 
 </li><li>
-<a href="02_positions.html">Positions</a>
+The \(\textbf{IV}\) chord is the Fa Major Triad.
 
 </li><li>
-<a href="03_intervals.html">Intervals</a>
+The \(\textbf{V}\) chord is the \(\text{Sol}^7\) Major Triad. (Sol Major triad with an added \(7\)th).
 
-</li><li>
-<a href="04_chords.html">Chords</a>
-
-</li><li>
-<a href="05_scales.html">Scales</a>
-
-</li><li>
-<a href="06_keys.html">Keys</a>
-
-</li></ol>
+</li></ul>
 </div>
   
 
