[CET] 02_01: fix little typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_01.html
+++ b/src/Notes/Math/Calculus/CET/02_01.html
@@ -86,7 +86,7 @@ On the following tables we see that the closer \(Q\) is to \(P\), that is the cl
 \(x\)
 </th>
 <th>
-$m_{PQ}
+\(m_{PQ}\)
 </th>
 </tr>
 </thead>
@@ -141,7 +141,7 @@ $m_{PQ}
 \(x\)
 </th>
 <th>
-$m_{PQ}
+\(m_{PQ}\)
 </th>
 </tr>
 </thead>
@@ -194,11 +194,11 @@ This suggests that the slope of the tangent line is the <span id="The Tangent an
 </p>
 
 \begin{align}
-\lim_{Q \leftarrow P} m_{PQ} = m
+\lim_{Q \rightarrow P} m_{PQ} = m
 \end{align}
 
 \begin{align}
-\lim_{x \leftarrow 1} \frac{x^2 - 1}{x - 1} = 2
+\lim_{x \rightarrow 1} \frac{x^2 - 1}{x - 1} = 2
 \end{align}
 
 <p>
