[CET] 02_02: start notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -66,6 +66,9 @@ Limits and Derivatives
 <li>
 <a href="02_01.html">The Tangent and Velocity Problems</a>
 
+</li><li>
+<a href="02_02.html">The Limit of a Function</a>
+
 </li></ol>
 </li></ol>
 </div>
