[CET] 02_02: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_02.html
+++ b/src/Notes/Math/Calculus/CET/02_02.html
@@ -49,6 +49,14 @@
 </li><li>
 <a href="02_02.html#How%20Can%20a%20Limit%20Fail%20to%20Exist%3F">How Can a Limit Fail to Exist</a>
 
+<ul>
+<li>
+<a href="02_02.html#Infinite%20Limits%3A%20Vertical%20Asymptotes">Infinite Limits  Vertical Asymptotes</a>
+
+</li><li>
+<a href="02_02.html#Vertical%20Asymptotes">Vertical Asymptotes</a>
+
+</li></ul>
 </li></ul>
 <hr>
 
@@ -133,6 +141,110 @@ By both definitions, we see that the following is true:
 <p>
 A limit fails to exist at a number \(a\) if the left- and right-hand limits are not equal.
 </p>
+
+<p>
+When guessing the value of a limit it is easy to guess the wrong value if we use inapproapriate values of \(x\). It is also hard to know when to stop calculating value (sometimes calculators and computers give the wrong values due to precission issues).
+</p>
+
+<div id="The Limit of a Function-How Can a Limit Fail to Exist?-Infinite Limits: Vertical Asymptotes"><h3 id="Infinite Limits: Vertical Asymptotes" class="header"><a href="#The Limit of a Function-How Can a Limit Fail to Exist?-Infinite Limits: Vertical Asymptotes">Infinite Limits: Vertical Asymptotes</a></h3></div>
+
+<p>
+Another way a limit at a number \(a\) can fail to exist is when the function values grow arbitrarily large (in absolute value) as \(x\) approaches \(a\).
+</p>
+
+<p>
+Let \(f\) be a function defined on both sides of \(a\), except possible at \(a\) itself, then:
+</p>
+
+\begin{align}
+\lim_{x \rightarrow a} f(x) = \infty
+\end{align}
+
+<p>
+means that the values of \(f(x)\) can be arbitrarily large by taking \(x\) sufficiently close to \(a\), but not equal to \(a\) (See Figure 10).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Math/Calculus/CET/infinite_limit_vertical_asymptote.png" alt="Infinite Limits: Vertical Asymptotes">
+</p>
+
+<p>
+Let \(f\) be a function defined on both sides of \(a\), except possible at \(a\) itself, then:
+</p>
+
+\begin{align}
+\lim_{x \rightarrow a} f(x) = -\infty
+\end{align}
+
+<p>
+means that the values of \(f(x)\) can be arbitrarily large negative by taking \(x\) sufficiently close to \(a\), but not equal to \(a\) (See Figure 11).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Math/Calculus/CET/infinite_limit_vertical_asymptote_negative.png" alt="Infinite Limits: Vertical Asymptotes">
+</p>
+
+<p>
+This does not mean that the limit exists, it simply expresses the particular way in which the limit does not exist.
+</p>
+
+<p>
+Similar definitions can be given for one-sided limits:
+</p>
+
+\begin{align}
+\lim_{x \rightarrow a^{-}} f(x) = \infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{-}} f(x) = -\infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{+}} f(x) = \infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{+}} f(x) = -\infty
+\end{align}
+
+<p>
+These are illustrated on the following figure:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Math/Calculus/CET/infinite_onesided_limit_vertical_asymptote.png" alt="Infinite One-Sided Limits: Vertical Asymptotes">
+</p>
+
+<div id="The Limit of a Function-How Can a Limit Fail to Exist?-Vertical Asymptotes"><h3 id="Vertical Asymptotes" class="header"><a href="#The Limit of a Function-How Can a Limit Fail to Exist?-Vertical Asymptotes">Vertical Asymptotes</a></h3></div>
+
+<p>
+The vertical line \(x = a\) is called a <span id="The Limit of a Function-How Can a Limit Fail to Exist?-Vertical Asymptotes-vertical asymptotes"></span><strong id="vertical asymptotes">vertical asymptotes</strong> of the curve \(y = f(x)\) if at least one of the following statements is true:
+</p>
+
+\begin{align}
+\lim_{x \rightarrow a} f(x) = \infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a} f(x) = -\infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{-}} f(x) = \infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{-}} f(x) = -\infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{+}} f(x) = \infty
+\end{align}
+
+\begin{align}
+\lim_{x \rightarrow a^{+}} f(x) = -\infty
+\end{align}
 </div>
   
 
