--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -69,6 +69,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_02.html">The Limit of a Function</a>
 
+</li><li>
+<a href="02_03.html">Calculating Limits Using the Limits Laws</a>
+
 </li></ol>
 </li></ol>
 </div>
