[CET] 02_03: fix typos [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_03.html
+++ b/src/Notes/Math/Calculus/CET/02_03.html
@@ -121,7 +121,7 @@ If we use the Product Law repeteadly with \(g(x) = f(x)\), then we arrive at the
 </p>
 
 \begin{align}
-\lim_{x \rightarrow a} [f(x)]^n = [\lim_{x \rightarrow a} f(x)]^n
+\lim_{x \rightarrow a} \left[f(x)\right]^n = [\lim_{x \rightarrow a} f(x)]^n
 \end{align}
 
 <p>
@@ -157,7 +157,7 @@ If we now let \(f(x) = x\) on the <span id="Calculating Limits Using the Limits 
 </p>
 
 \begin{align}
-\lim_{x \rightarrow a} sqrt[n]{x} = \sqrt[n]{\lim_{x \rightarrow a} x} = \sqrt[n]{a}
+\lim_{x \rightarrow a} \sqrt[n]{x} = \sqrt[n]{\lim_{x \rightarrow a} x} = \sqrt[n]{a}
 \end{align}
 
 <p>
